<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_sim</name>
  <version>0.0.0</version>
  <description>Mock robot package</description>
  <maintainer email="gianluca.filippone@gssi.it">Gianluca Filippone</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_sim_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
